[package]
name = "linestring2bezier"
version = "0.5.0"
edition = "2024"
authors = ["Øyvind Hjermstad <@yvind>"]

description = "For converting between geo_types::LineString<T: CoordFloat> and cubic bezier splines."
homepage = "https://github.com/yvind/linestring2bezier"
repository = "https://github.com/yvind/linestring2bezier"
readme = "README.md"
license = "MIT"
keywords = ["bezier", "geo"]

[dependencies]
geo-types = "0.7.16"
thiserror = "2.0.17"

[dev-dependencies]
geo = "0.32.0"
